// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`time utilities getFreeSlots should exclude occupied times from range 1`] = `
[
  {
    "endTime": "2024-01-07T17:00:00.000Z",
    "id": "2024-01-07T16:00:00.000Z",
    "startTime": "2024-01-07T16:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T18:00:00.000Z",
    "id": "2024-01-07T17:00:00.000Z",
    "startTime": "2024-01-07T17:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T21:00:00.000Z",
    "id": "2024-01-07T20:00:00.000Z",
    "startTime": "2024-01-07T20:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T12:00:00.000Z",
    "id": "2024-01-08T11:00:00.000Z",
    "startTime": "2024-01-08T11:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T14:00:00.000Z",
    "id": "2024-01-08T13:00:00.000Z",
    "startTime": "2024-01-08T13:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T15:00:00.000Z",
    "id": "2024-01-08T14:00:00.000Z",
    "startTime": "2024-01-08T14:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T16:00:00.000Z",
    "id": "2024-01-08T15:00:00.000Z",
    "startTime": "2024-01-08T15:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T18:00:00.000Z",
    "id": "2024-01-08T17:00:00.000Z",
    "startTime": "2024-01-08T17:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T19:00:00.000Z",
    "id": "2024-01-08T18:00:00.000Z",
    "startTime": "2024-01-08T18:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T20:00:00.000Z",
    "id": "2024-01-08T19:00:00.000Z",
    "startTime": "2024-01-08T19:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T21:00:00.000Z",
    "id": "2024-01-08T20:00:00.000Z",
    "startTime": "2024-01-08T20:00:00.000Z",
  },
]
`;

exports[`time utilities getFreeSlots should return first slot 2 hours after current time 1`] = `
[
  {
    "endTime": "2024-01-07T17:00:00.000Z",
    "id": "2024-01-07T16:00:00.000Z",
    "startTime": "2024-01-07T16:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T18:00:00.000Z",
    "id": "2024-01-07T17:00:00.000Z",
    "startTime": "2024-01-07T17:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T19:00:00.000Z",
    "id": "2024-01-07T18:00:00.000Z",
    "startTime": "2024-01-07T18:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T20:00:00.000Z",
    "id": "2024-01-07T19:00:00.000Z",
    "startTime": "2024-01-07T19:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T21:00:00.000Z",
    "id": "2024-01-07T20:00:00.000Z",
    "startTime": "2024-01-07T20:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T22:00:00.000Z",
    "id": "2024-01-07T21:00:00.000Z",
    "startTime": "2024-01-07T21:00:00.000Z",
  },
]
`;

exports[`time utilities getFreeSlots should return right times between 10 and 22 1`] = `
[
  {
    "endTime": "2024-01-07T11:00:00.000Z",
    "id": "2024-01-07T10:00:00.000Z",
    "startTime": "2024-01-07T10:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T12:00:00.000Z",
    "id": "2024-01-07T11:00:00.000Z",
    "startTime": "2024-01-07T11:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T13:00:00.000Z",
    "id": "2024-01-07T12:00:00.000Z",
    "startTime": "2024-01-07T12:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T14:00:00.000Z",
    "id": "2024-01-07T13:00:00.000Z",
    "startTime": "2024-01-07T13:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T15:00:00.000Z",
    "id": "2024-01-07T14:00:00.000Z",
    "startTime": "2024-01-07T14:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T16:00:00.000Z",
    "id": "2024-01-07T15:00:00.000Z",
    "startTime": "2024-01-07T15:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T17:00:00.000Z",
    "id": "2024-01-07T16:00:00.000Z",
    "startTime": "2024-01-07T16:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T18:00:00.000Z",
    "id": "2024-01-07T17:00:00.000Z",
    "startTime": "2024-01-07T17:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T19:00:00.000Z",
    "id": "2024-01-07T18:00:00.000Z",
    "startTime": "2024-01-07T18:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T20:00:00.000Z",
    "id": "2024-01-07T19:00:00.000Z",
    "startTime": "2024-01-07T19:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T21:00:00.000Z",
    "id": "2024-01-07T20:00:00.000Z",
    "startTime": "2024-01-07T20:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T22:00:00.000Z",
    "id": "2024-01-07T21:00:00.000Z",
    "startTime": "2024-01-07T21:00:00.000Z",
  },
]
`;

exports[`time utilities getFreeSlots should return slots for next days 1`] = `
[
  {
    "endTime": "2024-01-07T11:00:00.000Z",
    "id": "2024-01-07T10:00:00.000Z",
    "startTime": "2024-01-07T10:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T12:00:00.000Z",
    "id": "2024-01-07T11:00:00.000Z",
    "startTime": "2024-01-07T11:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T13:00:00.000Z",
    "id": "2024-01-07T12:00:00.000Z",
    "startTime": "2024-01-07T12:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T14:00:00.000Z",
    "id": "2024-01-07T13:00:00.000Z",
    "startTime": "2024-01-07T13:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T15:00:00.000Z",
    "id": "2024-01-07T14:00:00.000Z",
    "startTime": "2024-01-07T14:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T16:00:00.000Z",
    "id": "2024-01-07T15:00:00.000Z",
    "startTime": "2024-01-07T15:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T17:00:00.000Z",
    "id": "2024-01-07T16:00:00.000Z",
    "startTime": "2024-01-07T16:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T18:00:00.000Z",
    "id": "2024-01-07T17:00:00.000Z",
    "startTime": "2024-01-07T17:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T19:00:00.000Z",
    "id": "2024-01-07T18:00:00.000Z",
    "startTime": "2024-01-07T18:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T20:00:00.000Z",
    "id": "2024-01-07T19:00:00.000Z",
    "startTime": "2024-01-07T19:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T21:00:00.000Z",
    "id": "2024-01-07T20:00:00.000Z",
    "startTime": "2024-01-07T20:00:00.000Z",
  },
  {
    "endTime": "2024-01-07T22:00:00.000Z",
    "id": "2024-01-07T21:00:00.000Z",
    "startTime": "2024-01-07T21:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T11:00:00.000Z",
    "id": "2024-01-08T10:00:00.000Z",
    "startTime": "2024-01-08T10:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T12:00:00.000Z",
    "id": "2024-01-08T11:00:00.000Z",
    "startTime": "2024-01-08T11:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T13:00:00.000Z",
    "id": "2024-01-08T12:00:00.000Z",
    "startTime": "2024-01-08T12:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T14:00:00.000Z",
    "id": "2024-01-08T13:00:00.000Z",
    "startTime": "2024-01-08T13:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T15:00:00.000Z",
    "id": "2024-01-08T14:00:00.000Z",
    "startTime": "2024-01-08T14:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T16:00:00.000Z",
    "id": "2024-01-08T15:00:00.000Z",
    "startTime": "2024-01-08T15:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T17:00:00.000Z",
    "id": "2024-01-08T16:00:00.000Z",
    "startTime": "2024-01-08T16:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T18:00:00.000Z",
    "id": "2024-01-08T17:00:00.000Z",
    "startTime": "2024-01-08T17:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T19:00:00.000Z",
    "id": "2024-01-08T18:00:00.000Z",
    "startTime": "2024-01-08T18:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T20:00:00.000Z",
    "id": "2024-01-08T19:00:00.000Z",
    "startTime": "2024-01-08T19:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T21:00:00.000Z",
    "id": "2024-01-08T20:00:00.000Z",
    "startTime": "2024-01-08T20:00:00.000Z",
  },
  {
    "endTime": "2024-01-08T22:00:00.000Z",
    "id": "2024-01-08T21:00:00.000Z",
    "startTime": "2024-01-08T21:00:00.000Z",
  },
]
`;
